syntax = "proto3";

package calendar;

option go_package = "github.com/drewfead/cali/proto";

// CaliConfig is the typed configuration for the cali CLI
message CaliConfig {
  // Auth configuration
  AuthConfig auth = 1;

  // Default calendar ID to use when not specified
  string default_calendar_id = 2;

  // API endpoint override (for testing with mock servers)
  string api_endpoint = 3;
}

// AuthConfig holds authentication settings
message AuthConfig {
  // Service account credentials (takes priority if present)
  ServiceAccountCredentials service_account = 1;

  // OAuth client credentials (used if service_account not present)
  OAuthClientCredentials oauth_client = 2;

  // Path to OAuth token file for caching (optional, defaults to ~/.config/cali/token.json)
  string oauth_token_path = 3;
}

// ServiceAccountCredentials contains Google Cloud service account credentials
// This mirrors the structure of a service account JSON key file
message ServiceAccountCredentials {
  string type = 1;                    // Always "service_account"
  string project_id = 2;
  string private_key_id = 3;
  string private_key = 4;             // PEM-encoded private key
  string client_email = 5;
  string client_id = 6;
  string auth_uri = 7;
  string token_uri = 8;
  string auth_provider_x509_cert_url = 9;
  string client_x509_cert_url = 10;
}

// OAuthClientCredentials contains OAuth 2.0 client credentials
// This mirrors the structure of OAuth Desktop app credentials
message OAuthClientCredentials {
  string client_id = 1;
  string client_secret = 2;
  string project_id = 3;
  string auth_uri = 4;
  string token_uri = 5;
  string auth_provider_x509_cert_url = 6;
  repeated string redirect_uris = 7;
}
